remove unused code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section>
             <h1>Vlille</h1>
-            <input type="search" v-model="search"> recherche en cours: {{ search }}
+            <input type="search" v-model="search">
             <table>
                 <caption>{{ filteredStations.length }} stations</caption>
                 <tr>
