sort by station id

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <th>nom</th>
                     <th>etat</th>
                     <th>adresse</th>
-                    <th>nbVelosDispo</th>
-                    <th>nbPlacesDispo</th>
+                    <th>vélos</th>
+                    <th>attaches</th>
                     <th>CB</th>
                     <th>GPS</th>
                 </tr>
