--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Vlille with vuejs</title>
+    <title>V'Lille service status</title>
 
-    <meta name="description" content="Vlille with vuejs">
+    <meta name="description" content="V'Lille service status">
     <meta name="author" content="fmachen">
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -18,7 +18,7 @@
     <main>
         <section>
             <h1>Vlille</h1>
-            <input type="search" v-model="filterSearch">
+            <input type="search" v-model="filterSearch" placeholder="filter">
             <input type="checkbox" v-model="filterFavorite">
             <table>
                 <caption>{{ filteredStations.length }} stations</caption>
