--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="V'Lille service status">
     <meta name="author" content="fmachen">
 
+    <link rel="manifest" href="manifest.json">
+
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="main.css" media="screen">
 
